--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ gloo-net = "0.4.0"
 serde_json = "1.0.104"
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
-web-sys = {version = "0.3.64", features = ["HtmlInputElement", "Element", "HtmlDocument", "Storage", "Location", "Event"] }
+web-sys = {version = "0.3.64", features = ["HtmlInputElement", "Element", "HtmlDocument", "Storage", "Location"] }
 yew = { version = "0.20.0", features = ["csr"] }
 yewdux = "0.9.3"
 yew-router = "0.17"
